--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 .body {
   padding: 1rem 10rem;
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.4rem;
 }
 
