--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,9 @@
     <div>
       <h4>Posts</h4>
       <ul>
-        <li><a href="#">a</a></li>
-        <li><a href="#">b</a></li>
-        <li>c</li>
-        <li>d</li>
-        <li>e</li>
+        <li><a href="/a">a</a></li>
+        <li><a href="/b">b</a></li>
+        <li><a href="/c">c</a></li>
       </ul>
     </div>
 
@@ -19,7 +17,9 @@
         <li>
           <a href="/about">About</a>
         </li>
-        <li>Github</li>
+        <li>
+          <a href="https://github.com/dee-d-dev"> Github </a>
+        </li>
         <li>Twitter</li>
       </ul>
     </div>
